Added mouse events. Missing mouse offset adjustments