@@ -3,6 +3,7 @@ package software.ulpgc.simulation.core.model;
 import java.util.ArrayList;
 import java.util.Iterator;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class Simulator implements Iterable<Pendulum>{
     private List<Pendulum> pendulums;
@@ -22,7 +23,20 @@ public class Simulator implements Iterable<Pendulum>{
     public void nextFrame() {
         pendulums = pendulums.stream()
                 .map(this::nextState)
-                .toList();
+                .collect(Collectors.toList());
+    }
+
+
+
+    public Pendulum getPendulum(int id) {
+      return pendulums.stream()
+              .filter(p -> p.id() == id)
+              .findFirst()
+              .orElse(Pendulum.Null());
+    };
+
+    public void remove(Pendulum target) {
+        pendulums.remove(target);
     }
 
     private Pendulum nextState(Pendulum pendulum) {
@@ -30,7 +44,7 @@ public class Simulator implements Iterable<Pendulum>{
 
         double newTheta = pendulum.theta() + newOmega * dt;
 
-        return new Pendulum(pendulum.hangingCord(), newTheta, newOmega, pendulum.g(), pendulum.radius());
+        return new Pendulum(pendulum.id(), pendulum.hangingCord(), newTheta, newOmega, pendulum.g(), pendulum.radius());
     }
 
     private static double getAngularAcceleration(Pendulum pendulum) {
